# koi

./: .gitignore  404.html  Cargo.toml  GRAMMAR.md  Makefile.toml  README.md  REPORT.md  dev.md  docs.md  go.mod  grammar.ebnf  index.html  install.sh  justfile  koi.toml  mkdocs.yml  mylib  setup.sh  todo.md  todo.txt
.github/workflows/: docs.yml  release.yml  rust.yml
cmd/: main.go
crates/koi-ast/: Cargo.toml
crates/koi-ast/src/: file.rs  lib.rs  nodes.rs  path.rs  print.rs  token.rs
crates/koi-codegen-c/: Cargo.toml
crates/koi-codegen-c/src/: emit.rs  lib.rs
crates/koi-codegen-x86/: Cargo.toml
crates/koi-codegen-x86/src/: assemble.rs  assembly.rs  lib.rs
crates/koi-common/: Cargo.toml
crates/koi-common/src/: config.rs  (+3 more)
crates/koi-driver/: Cargo.toml
crates/koi-driver/src/: lib.rs
crates/koi-ir/: Cargo.toml
crates/koi-lower/: Cargo.toml
crates/koi-parser/: Cargo.toml
crates/koi-scanner/: Cargo.toml
crates/koi-sema/: Cargo.toml
crates/koi-sema/src/: lib.rs
crates/koi-sema/src/context/: mod.rs  modules.rs  symbols.rs  types.rs
crates/koi-sema/src/imports/: header.rs  libraries.rs  mod.rs
crates/koi-sema/src/module/: mod.rs  namespace.rs  symbols.rs
crates/koi-sema/src/types/: ast.rs  mod.rs
crates/koi-typecheck/: Cargo.toml
crates/koi-typecheck/src/: file_check.rs  lib.rs  module_check.rs
docs/: index.md  ir.md  koi.md  setup.sh
docs/examples/: work_with_c.md
docs/getstarted/: control-flow.md  create_project.md  external-symbols.md  main_function.md  modules.md  project-config.md  structs.md
docs/main/: index.html
examples/work_with_c/: index.html
getstarted/control-flow/: index.html
getstarted/create_project/: index.html
getstarted/external-symbols/: index.html
getstarted/hello_world/: index.html
getstarted/main_function/: index.html
getstarted/modules/: index.html
getstarted/project-config/: index.html
koi/: error.go  index.html  interface.go
koi/ast/: ast.go  print.go  type.go  types.go  visitor.go
koi/ir/: build.go  ir.go  ir_test.go  print.go
koi/parser/: decl.go  expr.go  parser.go  parser_test.go  stmt.go
koi/scanner/: scanner.go  scanner_test.go  util.go
koi/token/: file.go  token.go  token_test.go  types.go
koi/types/: ast.go  basic.go  check.go  check_test.go  context.go  reader.go  scope.go  table.go  types.go  visit.go
koi/util/: assert.go  error.go  util.go
lib/: entry.s
lib/compile/: entry.s
lib/mylib/: koi.toml
lib/std/: koi.toml
search/: search_index.json
src/: build.rs  cmd.rs  config.rs  driver.rs  error.rs  lib.rs  main.rs
src/ast/: ast.rs  file.rs  mod.rs  nodes.rs  print.rs  source.rs  source_test.rs  token.rs  types.rs  visitor.rs
src/cmd/: cmd.rs  mod.rs
src/common/: io.rs  mod.rs  source.rs  source_test.rs  testing.rs  vartable.rs
src/config/: config.rs  mod.rs  path.rs
src/context/: mod.rs  modules.rs  symbols.rs  types.rs
src/driver/: config.rs  driver.rs  mod.rs
src/error/: diagnostic.rs  error.rs  mod.rs
src/header/: header.rs
src/imports/: header.rs  header_test.rs  libraries.rs  mod.rs
src/ir/: emit.rs  ir.rs  ir_test.rs  mod.rs  nodes.rs  print.rs  sym.rs  types.rs
src/lower/: emit.rs  ir_test.rs  mod.rs
src/module/: exports.rs  header.rs  header_test.rs  mod.rs  module.rs  module_test.rs  namespace.rs  path.rs  symbol_test.rs  symbols.rs
src/parser/: depgraph.rs  error.rs  fileset.rs  mod.rs  parse.rs  parser.rs  parser_test.rs  passes.rs
src/pkg/: mod.rs  pkg.rs
src/scanner/: mod.rs  scanner.rs  scanner_test.rs
src/token/: error.rs  file.rs  mod.rs  scanner.rs  scanner_test.rs  source.rs  source_test.rs  token.rs  token_test.rs
src/typecheck/: check.rs  checker.rs  file_check.rs  fileset_check.rs  helper.rs  mod.rs  module_check.rs
src/types/: ast.rs  check.rs  checker.rs  checker_test.rs  context.rs  deps.rs  exports.rs  mod.rs  namespace.rs  nodes.rs  package.rs  pkg.rs  symtable.rs  types.rs
src/util/: io.rs  mod.rs  testing.rs  vartable.rs
stylesheets/: extra.css
(+115 files in other folders)
