[package]
name = "koi"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
petgraph = "0.8.3"
strum = "0.26"
strum_macros = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }
walkdir = "2"
