[workspace]
members = [".", "crates/*"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.54", features = ["derive"] }
petgraph = "0.8.3"
postcard = { version = "1.1.3", features = ["use-std"] }
rexpect = "=0.6.3"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
toml = "0.9.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2"

koi-common = { path = "crates/koi-common" }
koi-ast = { path = "crates/koi-ast" }
koi-ir = { path = "crates/koi-ir" }
koi-sema = { path = "crates/koi-sema" }
koi-scanner = { path = "crates/koi-scanner" }
koi-parser = { path = "crates/koi-parser" }
koi-typecheck = { path = "crates/koi-typecheck" }
koi-lower = { path = "crates/koi-lower" }
koi-codegen-c = { path = "crates/koi-codegen-c" }
koi-codegen-x86 = { path = "crates/koi-codegen-x86" }
koi-driver = { path = "crates/koi-driver" }

[package]
name = "koi"
version = "0.10.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
koi-driver = { workspace = true }
petgraph = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
