[package]
name = "koi-codegen-c"
version = "0.1.0"
edition = "2024"

[dependencies]
koi-common = { workspace = true }
koi-sema = { workspace = true }
koi-ir = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
koi-lower = { workspace = true }
koi-typecheck = { workspace = true }
koi-parser = { workspace = true }
koi-scanner = { workspace = true }
koi-sema = { workspace = true }
koi-common = { workspace = true }
