[package]
name = "koi-sema"
version = "0.1.0"
edition = "2024"

[dependencies]
koi-common = { workspace = true }
koi-ast = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
